--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -18,7 +18,7 @@ android {
     buildToolsVersion project.ext.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion project.ext.targetSdkVersion
     }
 
@@ -44,6 +44,8 @@ android {
 }
 
 dependencies {
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:design:24.2.1'
     compile project(':library')
     demo_extCompile project(path: ':extension-ffmpeg')
     demo_extCompile project(path: ':extension-flac')
