--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2016 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -19,63 +18,86 @@
     android:versionCode="2000"
     android:versionName="2.0.0">
 
-  <uses-permission android:name="android.permission.INTERNET"/>
-  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-  <!--<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="24"/>-->
+    <!--<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="24"/>-->
 
-  <application
-      android:label="@string/application_name"
-      android:icon="@drawable/ic_temp_icon_white"
-      android:largeHeap="true"
-      android:allowBackup="false">
-
-    <!--android:label="@string/application_name"-->
-    <activity android:name="br.rnp.futebol.vocoliseu.visual.activity.MainActivity"
-        android:theme="@style/VOCoLisEU">
-      <intent-filter>
-        <action android:name="android.intent.action.MAIN"/>
-        <category android:name="android.intent.category.LAUNCHER"/>
-      </intent-filter>
-    </activity>
-
-    <activity android:name="br.rnp.futebol.vocoliseu.visual.activity.ExperimentConfigurationControllerActivity"
-        android:theme="@style/VOCoLisEU">
-    </activity>
-
-    <activity android:name="br.rnp.futebol.vocoliseu.visual.activity.ExperimentGeneralInfoActivity"
-        android:theme="@style/VOCoLisEU">
-    </activity>
-
-    <activity android:name="br.rnp.futebol.vocoliseu.visual.activity.ScriptControllerActivity"
-        android:theme="@style/VOCoLisEU">
-    </activity>
-
-    <activity android:name="br.rnp.futebol.vocoliseu.visual.activity.ExperimentControllerActivity"
-        android:theme="@style/VOCoLisEU">
-    </activity>
-
-    <activity android:name="com.google.android.exoplayer2.demo.PlayerActivity"
-        android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
-        android:launchMode="singleTop"
+    <application
+        android:allowBackup="false"
+        android:icon="@drawable/ic_temp_icon_white"
         android:label="@string/application_name"
-        android:theme="@style/VOCoLisEU">
-      <intent-filter>
-        <action android:name="com.google.android.exoplayer.demo.action.VIEW"/>
-        <category android:name="android.intent.category.DEFAULT"/>
-        <data android:scheme="http"/>
-        <data android:scheme="https"/>
-        <data android:scheme="content"/>
-        <data android:scheme="asset"/>
-        <data android:scheme="file"/>
-      </intent-filter>
-      <intent-filter>
-        <action android:name="com.google.android.exoplayer.demo.action.VIEW_LIST"/>
-        <category android:name="android.intent.category.DEFAULT"/>
-      </intent-filter>
-    </activity>
+        android:largeHeap="true">
 
-  </application>
+        <!--android:label="@string/application_name"-->
+        <activity
+            android:name="br.rnp.futebol.vocoliseu.visual.activity.MainActivity"
+            android:theme="@style/VOCoLisEU">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="br.rnp.futebol.vocoliseu.visual.activity.unused.ExperimentConfigurationControllerActivity"
+            android:theme="@style/VOCoLisEU"/>
+
+        <activity
+            android:name="br.rnp.futebol.vocoliseu.visual.activity.unused.ExperimentGeneralInfoActivity"
+            android:theme="@style/VOCoLisEU"/>
+
+        <activity
+            android:name="br.rnp.futebol.vocoliseu.visual.activity.unused.ScriptControllerActivity"
+            android:theme="@style/VOCoLisEU"/>
+
+        <activity
+            android:name="br.rnp.futebol.vocoliseu.visual.activity.script.ScriptGeneralActivity"
+            android:theme="@style/VOCoLisEU"/>
+
+        <activity
+            android:name="br.rnp.futebol.vocoliseu.visual.activity.script.ScriptMetricsActivity"
+            android:theme="@style/VOCoLisEU"/>
+
+        <activity
+            android:name="br.rnp.futebol.vocoliseu.visual.activity.experiment.ExperimentGeneralActivity"
+            android:theme="@style/VOCoLisEU"/>
+
+        <activity
+            android:name="br.rnp.futebol.vocoliseu.visual.activity.experiment.ExperimentMetricsActivity"
+            android:theme="@style/VOCoLisEU"/>
+        <activity
+            android:name="br.rnp.futebol.vocoliseu.visual.activity.experiment.ExperimentScriptsActivity"
+            android:theme="@style/VOCoLisEU"/>
+
+
+        <activity
+            android:name="br.rnp.futebol.vocoliseu.visual.activity.unused.ExperimentControllerActivity"
+            android:theme="@style/VOCoLisEU"/>
+
+        <activity
+            android:name="com.google.android.exoplayer2.demo.PlayerActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
+            android:label="@string/application_name"
+            android:launchMode="singleTop"
+            android:theme="@style/VOCoLisEU">
+            <intent-filter>
+                <action android:name="com.google.android.exoplayer.demo.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:scheme="http" />
+                <data android:scheme="https" />
+                <data android:scheme="content" />
+                <data android:scheme="asset" />
+                <data android:scheme="file" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="com.google.android.exoplayer.demo.action.VIEW_LIST" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+    </application>
 
 </manifest>
